--- a/RAC-International-Example/Base.lproj/Localizable.strings
+++ b/RAC-International-Example/Base.lproj/Localizable.strings
@@ -10,4 +10,4 @@
 "Button" = "Button";
 "Label" = "Label";
 "Hello World" = "Hello World";
-"It's s pretty day." = "It's s pretty day.";
+"It's a pretty day." = "It's a pretty day.";
