--- a/RAC-International-Example/ja.lproj/Localizable.strings
+++ b/RAC-International-Example/ja.lproj/Localizable.strings
@@ -10,4 +10,4 @@
 "Button" = "ボタン";
 "Label" = "ラベル";
 "Hello World" = "こんにちは世界";
-"It's s pretty day." = "いい天気だな";
+"It's a pretty day." = "いい天気だな";
